<resources>
    <string name="app_name">Netsurf Payroll</string>
    <string name="font_roboto_regular">roboto_regular</string>
    <string name="login">Login</string>
    <string name="views">View Details</string>
    <string name="skip">Skip>></string>
    <string name="username">Username</string>
    <string name="pwd">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="site_address">www.netsurfnetwork.com</string>
    <string name="login_failed_msg">Failed to login! Please try later</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="username_empty_msg">Please enter username.</string>
    <string name="password_empty_msg">Please enter password.</string>


    <string name="leaves">Leaves</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Daily Attendance</item>
        <item>Change Password</item>
        <item>Logout</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_page">LoginPageActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
