<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="attendance.netsurf.netsurfattendance.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_dash_board" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="attendance.netsurf.netsurfattendance.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_page"
        android:name="attendance.netsurf.netsurfattendance.NewDashboard.WebPageFragment"
        android:label="Page Name"
        tools:layout="@layout/fragment_web_page" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="attendance.netsurf.netsurfattendance.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>