<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    android:layout_height="match_parent"
  >


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageview_product"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/netsurf_logo" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/curve_right_top"
                        android:drawableLeft="@mipmap/user"
                        android:drawablePadding="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/username"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />

                    <!-- <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />
-->
                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/login_username"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/curve_right_bottom"
                        android:drawableLeft="@mipmap/password"
                        android:drawablePadding="8dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:hint="@string/pwd"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />
                </RelativeLayout>
                >


                <RelativeLayout
                    android:id="@+id/img_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1.5">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:src="@drawable/login_btn" />

                </RelativeLayout>
                >

            </LinearLayout>
            >


            <!-- <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_login"
                android:padding="3dp"
                android:onClick="login_bt"
                android:text="@string/login"
                android:textColor="#009688"
                android:textSize="17sp"
                android:textStyle="bold" />-->

            <ProgressBar
                android:id="@+id/progressBar_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:progressTint="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:layout_below="@+id/login_layout"
                android:layout_marginTop="10dp"
                android:gravity="bottom|center"
                android:padding="5dp"
                android:text="www.netsurfnetwork.com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="visible" />


            <!--  <TextView
                  android:id="@+id/createAccount"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/login_layout"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="10dp"
                  android:gravity="center"
                  android:visibility="visible"
                  android:padding="5dp"
                  android:text="@string/newUser"
                  android:textColor="@color/white"
                  android:textSize="15sp" />

              <TextView
                  android:id="@+id/forget_pass"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/login_layout"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="5dp"
                  android:gravity="center"
                  android:visibility="gone"
                  android:padding="5dp"
                  android:text="Forgot Password?"
                  android:textColor="@color/white"
                  android:textSize="15sp" />-->

        </LinearLayout>
        >


    </ScrollView>

</RelativeLayout>